assets/css/main.css
/* ... */
		#nav a {
			position: relative;
			display: inline-block;
			color: #e6e6e6;
			width: 1em;
			height: 1em;
			line-height: 0.9em;
			font-size: 2.5em;
			margin: 0 0.25em 0 0.25em;
			opacity: 0.35;
			outline: 0;
			-moz-transition: opacity .25s ease-in-out;
			-webkit-transition: opacity .25s ease-in-out;
			-ms-transition: opacity .25s ease-in-out;
			transition: opacity .25s ease-in-out;
		}

			#nav a.icon:before {
				padding-right: 0;
			}

			#nav a:before {
				font-size: 0.8em;
			}

			#nav a:after {
				content: '';
				display: block;
				position: absolute;
				left: 50%;
				bottom: -0.75em;
				margin-left: -0.5em;
				border-bottom: solid 0em #ffffff;
				border-left: solid 0.5em transparent;
				border-right: solid 0.5em transparent;
				-moz-transition: border-bottom-width .25s ease-in-out;
				-webkit-transition: border-bottom-width .25s ease-in-out;
				-ms-transition: border-bottom-width .25s ease-in-out;
				transition: border-bottom-width .25s ease-in-out;
			}

			#nav a span {
				display: block;
				position: absolute;
				background: #222222;
				color: #ffffff;
				top: -2.75em;
				font-size: 0.4em;
				height: 2.25em;
				line-height: 2.25em;
				left: 50%;
				opacity: 0;
				-moz-transition: opacity .25s ease-in-out;
				-webkit-transition: opacity .25s ease-in-out;
				-ms-transition: opacity .25s ease-in-out;
				transition: opacity .25s ease-in-out;
				width: 5.5em;
				margin-left: -2.75em;
			}

				#nav a span:after {
					content: '';
					display: block;
					position: absolute;
					bottom: -0.4em;
					left: 50%;
					margin-left: -0.6em;
					border-top: solid 0.6em #222222;
					border-left: solid 0.6em transparent;
					border-right: solid 0.6em transparent;
				}

			#nav a:hover {
				opacity: 1.0;
			}

				#nav a:hover span {
					opacity: 1.0;
				}

			#nav a.active {
				opacity: 1.0;
			}

				#nav a.active:after {
					border-bottom-width: 0.5em;
				}

		@media screen and (max-width: 980px) {

			#nav a span {
				display: none;
			}

		}

/* Wrapper */

	#wrapper {
		width: 70em;
		margin-left: 0em;
		margin-top: 1em;
		min-height: 100vh;
		max-width: 100%;
		padding: 0em 0;
		display: -moz-flex;
		display: -webkit-flex;
		display: -ms-flex;
		display: flex;
		-moz-flex-direction: column;
		-webkit-flex-direction: column;
		-ms-flex-direction: column;
		flex-direction: column;
		-moz-align-items: center;
		-webkit-align-items: center;
		-ms-align-items: center;
		align-items: center;
		-moz-justify-content: center;
		-webkit-justify-content: center;
		-ms-justify-content: center;
		justify-content: center;
		-moz-transition: opacity 1s ease-in-out;
		-webkit-transition: opacity 1s ease-in-out;
		-ms-transition: opacity 1s ease-in-out;
		transition: opacity 1s ease-in-out;
	}

		body.is-preload #wrapper {
			opacity: 0;
		}

		@media screen and (max-width: 1280px) {

			#wrapper {
				padding: 3em 0;
				max-width: calc(100% - 6em);
			}

		}

		@media screen and (max-width: 980px) {

			#wrapper {
				padding: 1.5em 0;
				max-width: calc(100% - 8em);
			}

		}

		@media screen and (max-width: 736px) {

			#wrapper {
				padding: 1em 0;
				max-width: calc(100% - 2em);
			}

		}

		@media screen and (max-width: 360px) {

			#wrapper {
				padding: 1em 0;
				max-width: 100%;
			}

		}

/* Main */

	#main {
		position: relative;
		overflow: hidden;
		width: 100%;
		background: #ffffff;
		box-shadow: 0px 1px 0px 0px rgba(0, 0, 0, 0.25);
		-moz-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
		-webkit-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
		-ms-transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
		transition: min-height 0.5s ease-in-out, max-height 0.5s ease-in-out;
	}

		#main > .panel {
			-moz-transition: opacity 0.25s ease-in-out;
			-webkit-transition: opacity 0.25s ease-in-out;
			-ms-transition: opacity 0.25s ease-in-out;
			transition: opacity 0.25s ease-in-out;
			margin-bottom: 0;
			position: relative;
			padding: 3.5em 2.5em 2.5em 2.5em;
			width: 100%;
		}

			#main > .panel.inactive {
				opacity: 0;
			}

			@media screen and (max-width: 736px) {

				#main > .panel {
					padding: 2em 1.5em 1.5em 1.5em;
				}

			}

			#main > .panel.intro {
				padding: 0;
				height: 20em;
				display: -moz-flex;
				display: -webkit-flex;
				display: -ms-flex;
				display: flex;
				-moz-flex-direction: row;
				-webkit-flex-direction: row;
				-ms-flex-direction: row;
				flex-direction: row;
				-moz-align-items: center;
				-webkit-align-items: center;
				-ms-align-items: center;
				align-items: center;
			}

				#main > .panel.intro .pic {
					text-decoration: none;
					position: relative;
					-moz-flex-grow: 0;
					-webkit-flex-grow: 0;
					-ms-flex-grow: 0;
					flex-grow: 0;
					-moz-flex-shrink: 0;
					-webkit-flex-shrink: 0;
					-ms-flex-shrink: 0;
					flex-shrink: 0;
					width: 17em;
					height: 100%;
				}

					#main > .panel.intro .pic:before {
						content: '';
						position: absolute;
						top: 0;
						left: 0;
						background: url("images/overlay.png");
						width: 100%;
						height: 100%;
						z-index: 1;
					}

					#main > .panel.intro .pic img {
						position: relative;
						display: block;
						position: absolute;
						top: 0;
						left: 0;
						width: 100%;
						height: 100%;
						-moz-object-fit: cover;
						-webkit-object-fit: cover;
						-ms-object-fit: cover;
						object-fit: cover;
						-moz-object-position: center;
						-webkit-object-position: center;
						-ms-object-position: center;
						object-position: center;
					}
/* ... */

